[package]
name = "BentoBox"
version = "0.1.0"
authors = ["ControlCplusControlV"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels-abigen-macro = "0.1"
fuels-core = "0.2"
fuels-rs = "0.2"
fuel-gql-client = { version = "0.2", default-features = false }
fuel-tx = "0.2"
rand = "0.8"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
name = "integration_tests"
path = "tests/harness.rs"
harness = true
